<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="50dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/et_eamil"
        android:layout_below="@id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_below="@id/et_eamil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_below="@id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password">


        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:onClick="signIn"
            android:text="@string/signin" />



        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_signIn"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:onClick="singUp"
            android:text="@string/signup" />

    </LinearLayout>



    <TextView
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:text="@string/cip_main_title"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"/>



</RelativeLayout>